<resources>
    <string name="app_name">IOschool</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="this_app">com.alhudaghifari.ioschool</string>

    <!--Login Page-->
    <string name="login">Log In</string>
    <string name="login_as_teacher">Login as Teacher</string>

    <!--activity-->
    <string name="home">Main Menu</string>
    <string name="profil">Profil</string>
    <string name="setting">Setting Profil</string>

    <!--Profile Page-->
    <string name="nama_sekolah">SMA 1 Pekalongan</string>
    <string name="nama_siswa">Nama</string>
    <string name="Username">\@Username</string>
    <string name="nisn">NISN</string>
    <string name="kelas">Kelas</string>
    <string name="angkatan">Angkatan</string>
    <string name="farhan">Ahmad Farhan Ghifari</string>
    <string name="nisnfarhan">2013001</string>
    <string name="kelasfarhan">XII IPA 1</string>
    <string name="angkatanfarhan">2013</string>
    <string name="titik_dua">: </string>

    <!--menu source-->
    <string name="menu_logout">Logout</string>
    <string name="cancel">Tidak</string>
    <string name="logout_title">Logout Profile</string>
    <string name="logout_question">Anda yakin ingin Logout?</string>
    <string name="sudah_logout">Anda telah logout</string>

    <!--Setting Page-->
    <string name="ubah">Ubah</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="username">Username</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Input Password Baru</string>
    <string name="password_confirm">Konfirmasi Password</string>
    <string name="false_pwd_konfirm">Password konfirmasi harus sama dengan password baru.</string>
    <string name="judul_ubahpwd">Ubah Password</string>
    <string name="text_ubahpwd">Anda yakin ingin mengubah password?</string>

    <!--Score-->
    <string name="judul_quislatihan">Kuis dan Latihan</string>
    <string name="x">X</string>
    <string name="xi">XI</string>
    <string name="xii">XII</string>
    <string name="judul_utsuas">UTS dan UAS</string>
    <string name="judul_akir_semester">Raport Semester</string>
    <string name="title_activity_library">Library</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="kompetensi">Kompetensi</string>
    <string name="score">Score : 80</string>
    <string name="right_answer">Jawaban benar : 8</string>
    <string name="wrong_answer">Jawaban salah : 2</string>
    <string name="kkm">KKM : 7</string>
    <string name="catatan">Catatan</string>

    <!--Library-->
    <string name="judul_buku">judul bukuku sangat menarik sekali</string>
    <string name="available">Available</string>
    <string name="available_in">Available in 23/11/2017</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_schedule">Schedule</string>

    <!--forum-->
    <string-array name="daftar_forum">
        <item>Fisika</item>
        <item>Biologi</item>
        <item>Kimia</item>
        <item>Ekonomi</item>
        <item>Sosiologi</item>
        <item>Geografi</item>
        <item>Matematika IPA</item>
        <item>Matematika IPS</item>
        <item>Lain-lain</item>
    </string-array>


    <!--schedule-->
    <string name="istirahat">Istirahat</string>
    <string name="title_activity_score">Score</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="loremipsum2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>

    <!--Forum-->
    <string name="stackoverflow">I want to hide the titlebar for some of my activities. The problem is that I applied a style to all my activities, therefore I cant simply set the theme to @android:style/Theme.NoTitleBar
    Using the NoTitleBar theme as a parent for my style would remove the title bar for to much activities.
    Can I set a no title style item somewhere?
    </string>
    <string name="title_activity_forum">Forum</string>



</resources>
