<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alhudaghifari.ioschool.Activity.DetilScoreQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blue_main_color"
        android:layout_marginTop="1dp"
        android:paddingTop="@dimen/dp10"
        android:paddingLeft="@dimen/dp25"
        android:paddingRight="@dimen/dp25"
        android:paddingBottom="@dimen/dp10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quiz"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_judul"
            android:textStyle="bold"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/dp20"
        android:paddingLeft="@dimen/dp25"
        android:paddingRight="@dimen/dp25"
        android:paddingBottom="@dimen/dp25">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kompetensi"
                android:textStyle="bold"
                android:textSize="@dimen/size_text_judul"
                />

            <TextView
                android:id="@+id/tv_kompetensi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loremipsum"
                android:textSize="@dimen/size_text_isi"
                />

            <View
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/silver_icon_clicked"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp10"/>

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textStyle="bold"
                android:textSize="@dimen/size_text_judul"
                />

            <TextView
                android:id="@+id/tv_right_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_answer"
                android:layout_marginTop="@dimen/dp15"
                android:textStyle="italic"
                android:textColor="@color/blue_main_color"
                android:textSize="@dimen/size_text_isi"
                />

            <TextView
                android:id="@+id/tv_wrong_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_answer"
                android:layout_marginTop="@dimen/dp15"
                android:textStyle="italic"
                android:textColor="@color/blue_main_color"
                android:textSize="@dimen/size_text_isi"
                />

            <TextView
                android:id="@+id/tv_kkm"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/dp15"
                android:textColor="@color/blue_main_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kkm"
                android:textSize="@dimen/size_text_isi"
                />

            <View
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/silver_icon_clicked"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catatan"
                android:textStyle="bold"
                android:textSize="@dimen/size_text_judul"
                />

            <TextView
                android:id="@+id/tv_catatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loremipsum2"
                android:textSize="@dimen/size_text_isi"
                />

            <View
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black_text_2"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp10"/>


        </LinearLayout>


    </ScrollView>

</LinearLayout>
