<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="@dimen/dp180"
            android:layout_height="@dimen/dp180"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="@dimen/dp25">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfil"
                android:layout_width="@dimen/dp140"
                android:layout_height="@dimen/dp140"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                />

            <ImageButton
                android:id="@+id/imgBtnProfil"
                android:src="@drawable/icon_white_3"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_1"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/black_text_2"
                    android:text="@string/nama_siswa"
                    android:layout_marginBottom="@dimen/margin_bottom_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/black_text_2"
                    android:text="@string/farhan"
                    android:layout_marginBottom="@dimen/margin_bottom_text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/black_text_2"
                    android:text="@string/nisn"
                    android:layout_marginBottom="@dimen/margin_bottom_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/black_text_2"
                    android:text="@string/nisnfarhan"
                    android:layout_marginBottom="@dimen/margin_bottom_text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/black_text_2"
                    android:text="@string/kelas"
                    android:layout_marginBottom="@dimen/margin_bottom_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/black_text_2"
                    android:text="@string/kelasfarhan"
                    android:layout_marginBottom="@dimen/margin_bottom_text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/black_text_2"
                    android:text="@string/angkatan"
                    android:layout_marginBottom="@dimen/margin_bottom_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp18"
                    android:textColor="@color/black_text_2"
                    android:text="@string/angkatanfarhan"
                    android:layout_marginBottom="@dimen/margin_bottom_text"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txtNamaSekolah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_sekolah"
            android:textColor="@color/blue_main_color"
            android:layout_marginBottom="@dimen/dp40"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/sp20"
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>


</RelativeLayout>