<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp25"
    tools:context="com.alhudaghifari.ioschool.Activity.SettingPage">

    <ScrollView
        android:id="@+id/setting_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp10"
                android:paddingLeft="@dimen/dp10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/margin_top"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black_text_2"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ubah_password"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp10"
                android:paddingLeft="@dimen/dp10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_lama"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/margin_top"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp10"
                android:paddingLeft="@dimen/dp10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_baru"
                    android:inputType="textWebPassword"
                    android:layout_marginTop="@dimen/margin_top"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dp10"
                android:paddingLeft="@dimen/dp10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/margin_top"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
