<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alhudaghifari.ioschool.Activity.Score">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_judul"
                android:layout_weight="1"
                android:background="@color/blue_main_color"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp25"
                    android:gravity="center_vertical"
                    android:text="@string/judul_quislatihan"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_judul" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_isi"
                android:layout_weight="6"
                android:orientation="horizontal"
                android:padding="@dimen/dp10">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_kuislatihan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fadingEdge="none"
                    android:scrollbars="horizontal"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_judul"
                android:layout_weight="1"
                android:background="@color/blue_main_color"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp25"
                    android:gravity="center_vertical"
                    android:text="@string/judul_utsuas"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_judul" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_isi"
                android:layout_weight="6"
                android:orientation="horizontal"
                android:padding="@dimen/dp10">


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_utsuas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fadingEdge="none"
                    android:scrollbars="horizontal"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_judul"
                android:layout_weight="1"
                android:background="@color/blue_main_color"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp25"
                    android:gravity="center_vertical"
                    android:text="@string/judul_akir_semester"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_judul" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_isi"
                android:layout_weight="6"
                android:orientation="horizontal"
                android:padding="@dimen/dp10">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_rapotsemester"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fadingEdge="none"
                    android:scrollbars="horizontal"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
